--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="content">
-    <div class="grid1" id="me" style="background:url(images/banner3.jpg) no-repeat 0 0; background-position: center;">
+    <div class="grid1" id="me" style="background:url(images/banner2.jpg) no-repeat 0 0; background-position: center;">
         <a href="#"><img src="./images/messi1.jpg" title="Peng Qian"/></a>
         <h3>Peng Qian</h3>
         <h4>Zhejiang Gongshang University Computer Science M.S.</h4>
@@ -115,10 +115,14 @@
                     graphs for vulnerability detection. Extensive experiments
                     show that our proposed approach significantly
                     outperforms state-of-the-art methods in detecting
-                    three different types of vulnerabilities. </p>
+                    three different types of vulnerabilities.
+                </p>
+                <p><font color="color: #665cbe;"> <b> <a href="https://www.ijcai.org/Proceedings/2020/0454.pdf">IJCAI
+                    2020</a> </b> </font></p>
                 <a class="button" href="projects/papers/ijcai2020/ijcai20.pdf"> PDF </a>
                 <a class="button" href="https://github.com/Messi-Q/GNNSCVulDetector"> Code </a>
-                <a class="button" href="https://drive.google.com/file/d/1MIcft9QVK4h3SJFLtjtL3n6fNAPqTqna/view?usp=sharing"> Demo </a>
+                <a class="button"
+                   href="https://drive.google.com/file/d/1MIcft9QVK4h3SJFLtjtL3n6fNAPqTqna/view?usp=sharing"> Demo </a>
             </div>
             <div class="grid3-right">
                 <a href="projects/papers/ijcai2020/tmp.pdf">
@@ -148,6 +152,8 @@
                     rights confirmation and infringement tracking. Extensive experiments show the effectiveness of our
                     proposed method.
                 </p>
+                <p><font color="color: #665cbe;"> <b> <a href="https://ieeexplore.ieee.org/document/9073733">CCIS
+                    2019 Best Paper Runner-up Award</a> </b> </font></p>
                 <a class="button" href="projects/papers/ccis2019/ccis2019.pdf"> PDF </a>
                 <a class="button" href="projects/papers/ccis2019/slides.pptx"> Presentation </a>
                 <a class="button" href="https://github.com/Messi-Q/Resource-CI"> Code </a>
