--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="top-nav">
             <ul>
                 <li class="active"><a href="#me" class="scroll">Me</a></li>
+                <li><a href="#publication" class="scroll">Publication</a></li>
                 <li><a href="#Intern" class="scroll">Intern</a></li>
                 <li><a href="#Honor" class="scroll">Honor</a></li>
-                <li><a href="#publication" class="scroll">Publication</a></li>
                 <li><a href="https://blog.csdn.net/qq_34611579">Blog</a></li>
                 <li><a href="https://github.com/Messi-Q">Git</a></li>
             </ul>
@@ -40,10 +40,10 @@
 </div>
 
 <div class="content">
-    <div class="grid1" id="me" style="background:url(images/banner2.jpg) no-repeat 0 0; background-position: center;">
+    <div class="grid1" id="me" style="background:url(images/banner4.png) no-repeat 0 0; background-position: center;">
         <a href="#"><img src="./images/messi1.jpg" title="Peng Qian"/></a>
         <h3>Peng Qian</h3>
-        <h4>Zhejiang University Computer Science PHD candidate</h4>
+        <h4>Zhejiang University Computer Science PhD candidate</h4>
         <h4>messi.qp711@gmail.com</h4>
 
     </div>
@@ -59,6 +59,17 @@
             visiting student, under the supervision of <a href="https://www.comp.nus.edu.sg/cs/bio/rogerz/">Prof. Roger
             Zimmermann</a>.
         </p>
+    </div>
+
+    <div class="grid_gray">
+        <div class="grid2" id="publication">
+            <h3>Publication </h3>
+            <h5>Smart Contract Vulnerability Detection: From Pure Neural Network to Interpretable Graph Feature and Expert Pattern Fusion. IJCAI 2021</h5>
+            <h5>Combining Graph Neural Networks with Expert Knowledge for Smart Contract Vulnerability Detection. TKDE 2021 </h5>
+            <h5>Smart Contract Vulnerability Detection Technique: A Survey. Journal of Software 2021 </h5>
+            <h5>Smart Contract Vulnerability Detection Using Graph Neural Networks. IJCAI 2020 </h5>
+            <h5>Digital Resource Rights Confirmation and Infringement Tracking Based on Smart Contracts. IEEE CCIS 2019 </h5>
+        </div>
     </div>
 
     <div class="grid_gray">
@@ -86,8 +97,8 @@
     </div>
 
 
-    <div class="grid3" id="publication">
-        <div class="grid3-year"><h3> Publications </h3></div>
+    <div class="grid3" id="spublication">
+        <div class="grid3-year"><h3> Selected Publications </h3></div>
 
         <div class="grid3-header">
             <h4>Smart Contract Vulnerability Detection: From Pure Neural Network to Interpretable Graph Feature and Expert Pattern Fusion</h4>
@@ -112,7 +123,7 @@
                     2021</a> </b> </font></p>
                 <a class="button" href="projects/papers/ijcai2021/ijcai21.pdf"> PDF </a>
                 <a class="button" href="https://github.com/Messi-Q/AMEVulDetector"> Code </a>
-                <a class="button" href=""> Video </a>
+                <a class="button" href=""> Presentation </a>
             </div>
             <div class="grid3-right">
                 <a href="projects/papers/ijcai2021/network.pdf">
@@ -188,7 +199,7 @@
                 <a class="button" href="projects/papers/ijcai2020/ijcai20.pdf"> PDF </a>
                 <a class="button" href="https://github.com/Messi-Q/GNNSCVulDetector"> Code </a>
                 <a class="button"
-                   href="https://drive.google.com/file/d/1MIcft9QVK4h3SJFLtjtL3n6fNAPqTqna/view?usp=sharing"> Video </a>
+                   href="https://drive.google.com/file/d/1MIcft9QVK4h3SJFLtjtL3n6fNAPqTqna/view?usp=sharing"> Presentation </a>
             </div>
             <div class="grid3-right">
                 <a href="projects/papers/ijcai2020/tmp.pdf">
@@ -221,50 +232,12 @@
                 <p><font color="color: #665cbe;"> <b> <a href="https://ieeexplore.ieee.org/document/9073733">CCIS
                     2019 Best Paper Runner-up Award</a> </b> </font></p>
                 <a class="button" href="projects/papers/ccis2019/ccis2019.pdf"> PDF </a>
-                <a class="button" href="projects/papers/ccis2019/slides.pptx"> Presentation </a>
                 <a class="button" href="https://github.com/Messi-Q/Resource-CI"> Code </a>
+                <a class="button" href="projects/papers/ccis2019/slides.pptx"> Presentation </a>
             </div>
             <div class="grid3-right">
                 <a href="projects/papers/ccis2019/system.pdf">
                     <img src="projects/papers/ccis2019/system.jpg" title="project-name"/></a>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-
-        <div class="grid3-header">
-            <h4>Towards Automated Reentrancy Detection for Smart Contracts Based on Sequential Models</h4>
-        </div>
-        <div class="grid3-content">
-            <div class="grid3-left">
-                <!-- <h3>Abstract</h3> -->
-                <p>
-                    In the last decade, smart contract security issues lead to tremendous losses, which has attracted
-                    increasing public attention both in industry and in academia. Researchers have embarked on efforts
-                    with logic
-                    rules, symbolic analysis, and formal analysis to achieve encouraging results in smart contract
-                    vulnerability
-                    detection tasks. However, the existing detection tools are far from satisfactory. In this paper, we
-                    attempt
-                    to utilize the deep learning-based approach, namely bidirectional long-short term memory with
-                    attention
-                    mechanism (BLSTM-ATT), aiming to precisely detect reentrancy bugs. Furthermore, we propose contract
-                    snippet representations for smart contracts, which contributes to capturing essential semantic
-                    information
-                    and control owdependencies. Our extensive experimental studies on over 42,000 real-world smart
-                    contracts
-                    show that our proposed model and contract snippet representations signicantly outperform
-                    state-of-the-art
-                    methods. In addition, this work proves that it is practical to apply deep learning-based technology
-                    on smart
-                    contract vulnerability detection, which is able to promote future research towards this area.
-                </p>
-                <a class="button" href="projects/papers/access/access.pdf"> PDF </a>
-                <a class="button" href="https://github.com/Messi-Q/RecCheck"> Code </a>
-            </div>
-            <div class="grid3-right">
-                <a href="projects/papers/access/BLSTM_ATT.pdf">
-                    <img src="projects/papers/access/BLSTM_ATT.jpg" title="project-name"/></a>
             </div>
             <div class="clear"></div>
         </div>
