--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         <h3>Biography</h3>
         <p>
             I am currently a PhD Candidate at the School of Computer Science and Technology, Zhejiang
-            University, under the supervision of <a href="https://sites.google.com/view/zhenguangliu/">Prof. Zhenguang Liu</a>.
-            Before that, I received
-            my BSc degree in software engineering from Yangtze University, MSc degree in computer science from Zhejiang
-            Gongshang University. My research interests are deep learning, blockchain, and smart contract
+            University, under the supervision of <a href="https://sites.google.com/view/zhenguangliu/">Prof. Zhenguang Liu</a> and
+            <a href="https://person.zju.edu.cn/0088262">Prof. Qinming He</a>.
+            Before that, I received my BSc degree in software engineering from Yangtze University, MSc degree in computer science from Zhejiang
+            Gongshang University, under the supervision of Prof. Xun Wang.
+            My research interests are deep learning, blockchain, and smart contract
             security. Recently, I studied in the School of Computing at the National University of Singapore as a
             visiting student, under the supervision of <a href="https://www.comp.nus.edu.sg/cs/bio/rogerz/">Prof. Roger
             Zimmermann</a>.
