--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="#"><img src="./images/messi1.jpg" title="Peng Qian"/></a>
         <h3>Peng Qian</h3>
         <h4>Zhejiang University Computer Science PhD candidate</h4>
-        <h4>messi.qp711@gmail.com</h4>
+        <h4>pqian@zju.edu.cn</h4>
 
     </div>
     <div class="grid2" id="biography">
